# deploy-render

./: manage.py  pyproject.toml  render.yaml
base/: urls.py
base/templates/base/: index.html
deploy_renderer/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
